Removed calendar range height/start/end from range query
