# node-api-service/swagger.yaml
@@ -422,15 +422,6 @@ definitions:
             sig:
               type: string
               example: "lfdvO6fOeRo+wAj9n3Ca9GHMsRsosawRdZ6o2fkvdgIjMkaAa83RkTX/iveK5ogTs7FdNrxnnjmvC9bR5ayLACn3K8f65uUE0QgKwgaxSdbL2MohtLvQrF6eRCE6UhZa"
-      start:
-        type: integer
-        example: 729 
-      end:
-        type: integer
-        example: 729 
-      height:
-        type: integer
-        example: 32876
   GetConfigResponse:
     type: object
     properties:       
